Adds function call and html ID
- Resolves #2

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./assets/styles/styles.css" />
   </head>
   <body>
-    <h1>This is the page heading</h1>
+    <h1 id="theHead">This is the page heading</h1>
 
     <script src="./assets/js/main.js"></script>
   </body>
